Fixes to CMakeLists to compile on Triton

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,9 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
 project(parallelFDTD)
 
+set(CMAKE_CXX_STANDARD 11)
+
+
 set(SOURCES_CPP ${CMAKE_SOURCE_DIR}/src/base/GeometryHandler.cpp
                 ${CMAKE_SOURCE_DIR}/src/base/MaterialHandler.cpp
                 ${CMAKE_SOURCE_DIR}/src/base/SimulationParameters.cpp
@@ -32,7 +35,7 @@ set(SOURCES_CU ${CMAKE_SOURCE_DIR}/src/kernels/cudaUtils.cu
 
 set( GENERATE_DOXYGEN_DOCS OFF )
 
-set( BOOST_ROOT "C:/Users/jks/Documents/boost_1_63_0")
+#set( BOOST_ROOT "C:/Users/jks/Documents/boost_1_63_0")
 set( Boost_USE_STATIC_LIBS ON )
 set( Boost_USE_MULTITHREADED ON )
 set( Boost_USE_STATIC_RUNTIME OFF )
@@ -41,7 +44,7 @@ set( Boost_USE_STATIC_RUNTIME OFF )
 #If "find package" command gives errors, define the paths manually
 #set( BOOST_ROOT "C:/Program Files/boost/boost_1_55_0" )0
 #set( Boost_INCLUDE_DIRS ${BOOST_ROOT})
-set( BOOST_LIBRARYDIR ${BOOST_ROOT}/stage/lib)
+#set( BOOST_LIBRARYDIR ${BOOST_ROOT}/stage/lib)
 #set( BOOST_LIBRARYDIR /usr/lib64)
 
 if(WIN32)
@@ -49,7 +52,7 @@ if(WIN32)
 endif()
 
 if(UNIX)
-  find_package( Boost 1.41 REQUIRED COMPONENTS system thread date_time python unit_test_framework)
+  find_package( Boost 1.41 REQUIRED COMPONENTS system thread date_time python27 unit_test_framework)
 endif()
 
 if(BUILD_VISUALIZATION)
@@ -82,10 +85,10 @@ if(APPLE)
 endif()
 
 if(UNIX)
-  find_library(GLEW_LIBRARIES libGLEW.so /usr/lib/x86_64-linux-gnu/)
-  link_directories(/usr/local/lib)
-  set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -w -m64 -fPIC -O3 -DBOOST_PYTHON_DYNAMIC_MODULE")
-  set(unix_specific_libraries pthread rt)
+  #find_library(GLEW_LIBRARIES libGLEW.so /usr/lib/x86_64-linux-gnu/)
+  #link_directories(/usr/local/lib)
+  #set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -w -m64 -fPIC -O3 -DBOOST_PYTHON_DYNAMIC_MODULE")
+  #set(unix_specific_libraries pthread rt)
 endif()
 
 set( VOXELIZER_ROOT ${CMAKE_SOURCE_DIR}/src/Voxelizer )
@@ -111,16 +114,12 @@ endif()
 
 set( CUDA_NVCC_FLAGS_RELEASE ${CUDA_NVCC_FLAGS_RELEASE};
                              -gencode arch=compute_61,code=sm_61
-                             -gencode arch=compute_35,code=sm_35
-                             -gencode arch=compute_37,code=sm_37
-                             -gencode arch=compute_20,code=sm_20
+                             -gencode arch=compute_60,code=sm_60
                              )
 
 set( CUDA_NVCC_FLAGS_DEBUG ${CUDA_NVCC_FLAGS_DEBUG};
                              -gencode arch=compute_61,code=sm_61
-                             -gencode arch=compute_35,code=sm_35
-                             -gencode arch=compute_37,code=sm_37
-                             -gencode arch=compute_20,code=sm_20
+                             -gencode arch=compute_60,code=sm_60
                              )
 
 include_directories( ${OPENGL_INCLUDE_DIR} )
@@ -147,12 +146,6 @@ message( STATUS "Boost python lib: ${Boost_PYTHON_LIBRARY}" )
 message( STATUS "GLEW libs: ${GLEW_LIBRARIES}" )
 message( STATUS "Voxelizer lib: ${VOXELIZER_LIB}" )
 message( STATUS "Python lib: ${PYTHON_LIBRARIES}" )
-
-message( STATUS "CMAKE_C_COMPILER_VERSION : ${CMAKE_C_COMPILER_VERSION}" )
-message( STATUS "CMAKE_CXX_COMPILER_VERSION : ${CMAKE_CXX_COMPILER_VERSION}" )
-
-message( STATUS "CMAKE_C_COMPILER_VERSION : ${CMAKE_C_COMPILER_VERSION}" )
-message( STATUS "CMAKE_CXX_COMPILER_VERSION : ${CMAKE_CXX_COMPILER_VERSION}" )
 
 message( STATUS "CMAKE_C_COMPILER_VERSION : ${CMAKE_C_COMPILER_VERSION}" )
 message( STATUS "CMAKE_CXX_COMPILER_VERSION : ${CMAKE_CXX_COMPILER_VERSION}" )
