The python library also needs boost::numpy

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,18 +79,18 @@ if(Boost_VERSION_MINOR LESS 67 )
 
   if(WIN32) # On windows include the chrono library
     message( STATUS "WIN 66")
-    find_package( Boost 1.41 COMPONENTS system thread date_time unit_test_framework python chrono REQUIRED)
+    find_package( Boost 1.41 COMPONENTS system thread date_time unit_test_framework python chrono numpy REQUIRED)
   else()
-    find_package( Boost 1.41 COMPONENTS system thread date_time unit_test_framework python REQUIRED)
+    find_package( Boost 1.41 COMPONENTS system thread date_time unit_test_framework python numpy REQUIRED)
   endif()
 
 else()
 
   # with boost > 1.66, we need to specify the python version.
   if(WIN32) # On windows include the chrono library
-    find_package( Boost 1.41 COMPONENTS system thread date_time unit_test_framework python chrono REQUIRED)
+    find_package( Boost 1.41 COMPONENTS system thread date_time unit_test_framework python chrono numpy REQUIRED)
   else()
-    find_package( Boost 1.41 COMPONENTS system thread date_time unit_test_framework python${Python_VERSION_MAJOR}${Python_VERSION_MINOR} REQUIRED)
+    find_package( Boost 1.41 COMPONENTS system thread date_time unit_test_framework python${Python_VERSION_MAJOR}${Python_VERSION_MINOR} numpy REQUIRED)
   endif()
 
 endif()
