--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,32 +1,50 @@
 
-cuda_add_library( libParallelFDTD ${SOURCES_CPP} ${SOURCES_CU} )
+#cuda_add_library( libParallelFDTD ${SOURCES_CPP} ${SOURCES_CU} )
 
-cuda_add_executable( testExec main.cpp ${SOURCES_CPP} ${SOURCES_CU} )
+#cuda_add_executable( testExec main.cpp ${SOURCES_CPP} ${SOURCES_CU} )
 
-target_link_libraries(testExec ${GLUT_LIBRARIES} ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES}
-                               ${VOXELIZER_LIB}
-                               ${Boost_LIBRARIES} ${unix_specific_libraries})
+#target_link_libraries(testExec ${GLUT_LIBRARIES}
+#                ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES}
+#                ${VOXELIZER_LIB}
+#                ${Boost_LIBRARIES} ${unix_specific_libraries})
+
+#target_link_libraries( libParallelFDTD ${GLUT_LIBRARIES}
+#                  ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES}
+#                  ${VOXELIZER_LIB}
+#                  ${Boost_THREAD_LIBRARY} ${Boost_SYSTEM_LIBRARY}
+#                  ${Boost_DATE_TIME_LIBRARY} ${unix_specific_libraries})
+
 
 if(BUILD_PYTHON)
   cuda_add_library( libPyFDTD SHARED ${SOURCES_CPP} ${SOURCES_CU} ${CMAKE_SOURCE_DIR}/src/AppPy.cpp)
+  target_link_libraries( libPyFDTD ${GLUT_LIBRARIES} ${OPENGL_LIBRARIES}
+        ${GLEW_LIBRARIES} ${VOXELIZER_LIB}  ${unix_specific_libraries}
+        ${PYTHON_LIBRARIES} ${Boost_LIBRARIES}
+  )
+  set_target_properties( libPyFDTD PROPERTIES
+    ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/python/
+    LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/python/
+  )
+
+  if(WIN32)
+    if(NOT "$ENV{CONDA_PREFIX}" STREQUAL "")
+      install(FILES ${CMAKE_BINARY_DIR}/python//liblibPyFDTD.lib DESTINATION $ENV{CONDA_PREFIX}/lib/python${Python_VERSION_MAJOR}.${Python_VERSION_MINOR}/)
+    else()
+      install(FILES ${CMAKE_BINARY_DIR}/python//liblibPyFDTD.lib DESTINATION ${CMAKE_SOURCE_DIR}/python/)
+    endif()
+  endif()
+  if(UNIX)
+    if(NOT "$ENV{CONDA_PREFIX}" STREQUAL "")
+      install(FILES ${CMAKE_BINARY_DIR}/python//liblibPyFDTD.so DESTINATION $ENV{CONDA_PREFIX}/lib/python${Python_VERSION_MAJOR}.${Python_VERSION_MINOR}/)
+    else()
+      install(FILES ${CMAKE_BINARY_DIR}/python//liblibPyFDTD.so DESTINATION ${CMAKE_SOURCE_DIR}/python/)
+    endif()
+  endif()
 endif()
 
-target_link_libraries( libParallelFDTD ${GLUT_LIBRARIES} ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES}
-                                       ${VOXELIZER_LIB}
-                                       ${Boost_THREAD_LIBRARY} ${Boost_SYSTEM_LIBRARY}
-                                       ${Boost_DATE_TIME_LIBRARY} ${unix_specific_libraries})
 
-
-
-if(BUILD_PYTHON)
-target_link_libraries( libPyFDTD ${GLUT_LIBRARIES} ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES}
-                                 ${VOXELIZER_LIB}  ${unix_specific_libraries}
-                                 ${PYTHON_LIBRARIES} ${Boost_LIBRARIES})
-endif()
-
-
-set_target_properties( testExec PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/ )
-set_target_properties( libParallelFDTD PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib/ )
+#set_target_properties( testExec PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/ )
+#set_target_properties( libParallelFDTD PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib/ )
 
 if(WIN32)
 install(FILES ${CMAKE_SOURCE_DIR}/lib/libParallelFDTD.lib ${VOXELIZER_LIB_PATH}/Voxelizer.lib
